// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`p: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`p: {"type":"SECOND"} - history_index 1`] = `0`;

exports[`p: {"type":"SECOND"} - response 1`] = `false`;

exports[`p: {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`p: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`p: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`p: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`p: {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`po: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`po: {"type":"SECOND"} - history_index 1`] = `0`;

exports[`po: {"type":"SECOND"} - response 1`] = `false`;

exports[`po: {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`po: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`po: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`po: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`po: {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`pop f: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`pop f: {"type":"SECOND"} - history_index 1`] = `0`;

exports[`pop f: {"type":"SECOND"} - response 1`] = `false`;

exports[`pop f: {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`pop f: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop f: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop f: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`pop f: {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`pop from : {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`pop from : {"type":"SECOND"} - history_index 1`] = `0`;

exports[`pop from : {"type":"SECOND"} - response 1`] = `false`;

exports[`pop from : {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`pop from : {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop from : {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop from : {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`pop from : {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`pop from r: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`pop from r: {"type":"SECOND"} - history_index 1`] = `0`;

exports[`pop from r: {"type":"SECOND"} - response 1`] = `false`;

exports[`pop from r: {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`pop from r: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop from r: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop from r: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`pop from r: {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`pop from route t: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`pop from route t: {"type":"SECOND"} - history_index 1`] = `0`;

exports[`pop from route t: {"type":"SECOND"} - response 1`] = `false`;

exports[`pop from route t: {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`pop from route t: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop from route t: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop from route t: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`pop from route t: {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`pop from route that won: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`pop from route that won: {"type":"SECOND"} - history_index 1`] = `0`;

exports[`pop from route that won: {"type":"SECOND"} - response 1`] = `false`;

exports[`pop from route that won: {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`pop from route that won: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop from route that won: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop from route that won: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`pop from route that won: {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`pop from route that wont let y: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`pop from route that wont let y: {"type":"SECOND"} - history_index 1`] = `0`;

exports[`pop from route that wont let y: {"type":"SECOND"} - response 1`] = `false`;

exports[`pop from route that wont let y: {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`pop from route that wont let y: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop from route that wont let y: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop from route that wont let y: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`pop from route that wont let y: {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`pop from route that wont let you : {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`pop from route that wont let you : {"type":"SECOND"} - history_index 1`] = `0`;

exports[`pop from route that wont let you : {"type":"SECOND"} - response 1`] = `false`;

exports[`pop from route that wont let you : {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`pop from route that wont let you : {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop from route that wont let you : {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop from route that wont let you : {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`pop from route that wont let you : {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`pop from route that wont let you leave:  - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`pop from route that wont let you leave:  - history_index 1`] = `1`;

exports[`pop from route that wont let you leave:  - response 1`] = `false`;

exports[`pop from route that wont let you leave:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop from route that wont let you leave:  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop from route that wont let you leave:  - routes - SECOND - beforeLeave 1`] = `1`;

exports[`pop from route that wont let you leave:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "backward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": Object {},
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 0,
        "kind": "back",
        "length": 2,
        "pathname": "/",
        "pop": true,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": undefined,
          "url": "/",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"FIRST\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"basename\\":\\"\\",\\"state\\":{},\\"location\\":{\\"url\\":\\"/\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"backward\\",\\"status\\":200,\\"kind\\":\\"back\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"state\\":{},\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":0,\\"length\\":2,\\"pop\\":true}}}",
}
`;

exports[`pop from route that wont let you leave:  - title 1`] = `"SECOND"`;

exports[`pop from route that wont let you leave: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`pop from route that wont let you leave: {"type":"SECOND"} - history_index 1`] = `0`;

exports[`pop from route that wont let you leave: {"type":"SECOND"} - response 1`] = `false`;

exports[`pop from route that wont let you leave: {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`pop from route that wont let you leave: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop from route that wont let you leave: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop from route that wont let you leave: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`pop from route that wont let you leave: {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`pop from route: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`pop from route: {"type":"SECOND"} - history_index 1`] = `0`;

exports[`pop from route: {"type":"SECOND"} - response 1`] = `false`;

exports[`pop from route: {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`pop from route: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop from route: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop from route: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`pop from route: {"type":"SECOND"} - title 1`] = `"FIRST"`;

exports[`pop:  - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": Object {},
    "url": "/",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`pop:  - history_index 1`] = `0`;

exports[`pop:  - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "index": 0,
    "kind": "back",
    "length": 2,
    "pathname": "/",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": undefined,
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
      ],
      "hash": "",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {},
      "pathname": "/second",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FIRST",
}
`;

exports[`pop:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop:  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "back",
    "length": 2,
    "params": Object {},
    "pathname": "/",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/",
          "search": "",
          "state": undefined,
          "url": "/",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "state": Object {},
          "url": "/second",
        },
      ],
      "hash": "",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {},
      "pathname": "/second",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "SECOND",
      "url": "/second",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "FIRST",
}
`;

exports[`pop:  - title 1`] = `"FIRST"`;

exports[`pop: {"type":"SECOND"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/",
    "search": "",
    "state": undefined,
    "url": "/",
  },
]
`;

exports[`pop: {"type":"SECOND"} - history_index 1`] = `0`;

exports[`pop: {"type":"SECOND"} - response 1`] = `false`;

exports[`pop: {"type":"SECOND"} - routes - FIRST - beforeLeave 1`] = `1`;

exports[`pop: {"type":"SECOND"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop: {"type":"SECOND"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop: {"type":"SECOND"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/",
            "search": "",
            "state": undefined,
            "url": "/",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": undefined,
        "url": "/",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"scene\\":\\"\\",\\"direction\\":\\"forward\\",\\"status\\":200,\\"kind\\":\\"push\\",\\"entries\\":[{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"basename\\":\\"\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\"},{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"state\\":{},\\"key\\":\\"345678\\",\\"url\\":\\"/second\\",\\"basename\\":\\"\\"}],\\"index\\":1,\\"length\\":2,\\"pop\\":false}}}",
}
`;

exports[`pop: {"type":"SECOND"} - title 1`] = `"FIRST"`;
